<resources>
    <string name="app_name">mus.yrd</string>
    <string name="guidelines">No hateful content in any way is allowed including anything racist, anything based on ones ethnicity, gender identity, sexual orientation, age, disability or otherwise.   No violence or threats, bullying, harassment, or harmful or suicidal content is allowed.   No nudity or sexually explicit content is allowed.   Spamming reviews, impersonating someone else or posting links can result in your account being terminated.   Breaking any of these community guidelines can result in your account being terminated.   Terminated accounts cannot be recovered.</string>
    <string name="email">e-mail</string>
    <string name="username">username</string>
    <string name="register">register</string>
    <string name="signin">sign in</string>
    <string name="password">password</string>
    <string name="under13">anyone under 13 cannot create or sign into an account</string>
    <string name="priv">by clicking sign in or register you agree to our terms of service and privacy policy</string>
    <string name="followinstructions">reviews from users you follow show up here. search for albums to find some users to follow!</string>
    <string name="recinstructions">user recommendations update as you review more releases</string>
    <string name="guidetitle">community guidelines</string>
    <string name="bio">bio</string>
    <string name="save">save</string>
    <string name="back">back</string>
    <string name="newrelease">upload new release</string>
    <string name="search">search…</string>
    <string name="releases">releases</string>
    <string name="users">users</string>
    <string name="nouser">no user with that name exists</string>
    <string name="following">following</string>
    <string name="createrev">create review</string>
    <string name="report">report</string>
    <string name="reppromo">self-promotion/posting links</string>
    <string name="reppfp">profile picture breaks community guidelines</string>
    <string name="rephij">account may have been hijacked</string>
    <string name="repbul">bullying</string>
    <string name="reportusr">report user</string>
    <string name="repimper">impersonation</string>
    <string name="repunder">may be under 13</string>
    <string name="comguide">our community guidelines can be found here</string>
    <string name="other_problems_tweet_us_musyrd">other problems? tweet us (put your twitter handle here!)</string>
    <string name="revtxt">review text</string>
    <string name="post">post</string>
    <string name="writerev">write review…</string>
    <string name="title">title</string>
    <string name="artist">artist</string>
    <string name="cancel">cancel</string>
    <string name="add_release">add release</string>
    <string name="release_title">release title</string>
    <string name="artist_name">artist name(s)</string>
    <string name="album_art">album art</string>
    <string name="error">error!</string>
    <string name="followers">followers</string>
    <string name="unfollow">unfollow</string>
    <string name="user_hasnt_posted_anything">user hasn\'t posted anything</string>
</resources>