<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#141915">

    <Button
        android:id="@+id/reportbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#6E6E6E"
        android:text="@string/report"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton6"
        app:layout_constraintVertical_bias="0.96" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/reportUser"
        app:layout_constraintStart_toStartOf="@+id/reportUser"
        app:layout_constraintTop_toBottomOf="@+id/reportUser"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/iconseparator" />

    <ImageView
        android:id="@+id/backtouser"
        android:layout_width="28dp"
        android:clickable="true"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="7dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/abc_vector_test"
        android:focusable="true" />

    <RadioButton
        android:id="@+id/radioButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/reppromo"
        android:textColor="#CACACA"
        app:layout_constraintEnd_toEndOf="@+id/radioButton3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/radioButton3"
        app:layout_constraintTop_toBottomOf="@+id/radioButton3" />

    <RadioButton
        android:id="@+id/radioButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/reppfp"
        android:textColor="#CACACA"
        app:layout_constraintEnd_toEndOf="@+id/radioButton4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/radioButton4"
        app:layout_constraintTop_toBottomOf="@+id/radioButton4" />

    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/rephij"
        android:textColor="#CACACA"
        app:layout_constraintEnd_toEndOf="@+id/radioButton6"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/radioButton6"
        app:layout_constraintTop_toBottomOf="@+id/radioButton6" />

    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/repbul"
        android:textColor="#CACACA"
        app:layout_constraintEnd_toEndOf="@+id/radioButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/radioButton"
        app:layout_constraintTop_toBottomOf="@+id/radioButton" />

    <TextView
        android:id="@+id/reportUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/reportusr"
        android:textColor="#CCCCCC"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <RadioButton
        android:id="@+id/radioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/repimper"
        android:textColor="#CACACA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView14"
        app:layout_constraintTop_toBottomOf="@+id/imageView14" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:text="@string/repunder"
        android:textColor="#CACACA"
        app:layout_constraintEnd_toEndOf="@+id/radioButton5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/radioButton5"
        app:layout_constraintTop_toBottomOf="@+id/radioButton5" />

    <Button
        android:id="@+id/guidelines"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#00FFFFFF"
        android:text="@string/comguide"
        android:textAllCaps="false"
        android:textColor="#6A9CFF"
        android:textSize="9sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/reportbutton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButton2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/other_problems_tweet_us_musyrd"
        android:textColor="#7E7E7E"
        android:textSize="9sp"
        app:layout_constraintBottom_toTopOf="@+id/reportbutton"
        app:layout_constraintEnd_toEndOf="@+id/radioButton2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/radioButton2"
        app:layout_constraintTop_toBottomOf="@+id/radioButton2"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>