<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121613"
    tools:context=".LoginScreen">


    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHint="#FFAEAEAE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsername"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:textColor="@android:color/white"
        android:textColorHint="#AEAEAE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="h,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <Button
        android:id="@+id/createacc"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="12sp"
        android:backgroundTint="#6E6E6E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.739"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPass"
        app:layout_constraintVertical_bias="0.195" />

    <Button
        android:id="@+id/signin"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:textAllCaps="false"
        android:textSize="12sp"
        app:backgroundTint="#0474FF"
        android:backgroundTint="#6E6E6E"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/createacc"
        app:layout_constraintHorizontal_bias="0.615"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPass"
        app:layout_constraintVertical_bias="0.195" />

    <EditText
        android:id="@+id/txtPass"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="#FFAEAEAE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="176dp"
        android:layout_height="38dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toTopOf="@+id/txtUsername"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="227dp"
        android:layout_height="26dp"
        android:gravity="center"
        android:text="@string/under13"
        android:textColor="#9A9A9A"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="224dp"
        android:layout_height="33dp"
        android:gravity="center"
        android:text="@string/priv"
        android:textColor="#9A9A9A"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signin"
        app:layout_constraintVertical_bias="0.100000024" />

    <Button
        android:id="@+id/tos"
        android:layout_width="74dp"
        android:layout_height="17dp"
        android:backgroundTint="#00FFFFFF"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.24"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/privacy"
        android:layout_width="67dp"
        android:layout_height="15dp"
        android:backgroundTint="#00FFFFFF"
        android:foregroundTint="#00FFFFFF"
        android:visibility="visible"
        app:iconTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.79"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toTopOf="@+id/textView7"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>