<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#141915">

    <ImageButton
        android:id="@+id/changePfp"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:layout_marginTop="10dp"
        android:background="#00FFFFFF"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/separator"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.050000012"
        app:srcCompat="@drawable/icontemp"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editBio"
        app:layout_constraintVertical_bias="0.050000012"
        app:srcCompat="@drawable/seperator" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="20dp"
        android:layout_height="21dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="@+id/changePfp"
        app:layout_constraintEnd_toEndOf="@+id/changePfp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/changePfp"
        app:layout_constraintTop_toTopOf="@+id/changePfp"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/editimage" />

    <EditText
        android:id="@+id/editBio"
        android:layout_width="245dp"
        android:layout_height="65dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/bio"
        android:textAlignment="center"
        android:textColor="#515151"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/changePfp"
        app:layout_constraintStart_toStartOf="@+id/changePfp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.26" />

    <Button
        android:id="@+id/savebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#6E6E6E"
        android:text="@string/save"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

    <Button
        android:id="@+id/backbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#6E6E6E"
        android:text="@string/back"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.96" />

</androidx.constraintlayout.widget.ConstraintLayout>