<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#141915">

    <Button
        android:id="@+id/gotoSearchExp"
        android:layout_width="61dp"
        android:layout_height="66dp"
        android:background="#00FFFFFF"
        android:foregroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.542"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/gotoMainExp"
        android:layout_width="61dp"
        android:layout_height="66dp"
        android:background="#00FFFFFF"
        android:foregroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/gotoProfileExp"
        android:layout_width="61dp"
        android:layout_height="66dp"
        android:background="#00FFFFFF"
        android:foregroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.88"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="441dp"
        android:layout_height="69dp"
        android:clickable="false"
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ui" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/followUsersList"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:divider="@null"
        android:overScrollMode="never"
        android:dividerHeight="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/releaseList"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck"
        tools:itemCount="0">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/usersList"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:divider="@null"
        android:dividerHeight="0dp"
        android:visibility="gone"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/releaseList"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="SpeakableTextPresentCheck"
        tools:itemCount="0">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/newrelease"
        android:layout_width="370dp"
        android:layout_height="66dp"
        android:background="#232323"
        android:gravity="center"
        android:text="@string/newrelease"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/followUsersList"
        app:layout_constraintVertical_bias="0.01999998" />

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/search"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <Button
        android:id="@+id/releaseList"
        android:layout_width="180dp"
        android:layout_height="39dp"
        android:backgroundTint="#272727"
        android:text="@string/releases"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="@+id/followUsersList"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/search_bar"
        app:layout_constraintTop_toBottomOf="@+id/search_bar" />

    <Button
        android:id="@+id/userList"
        android:layout_width="180dp"
        android:layout_height="39dp"
        android:backgroundTint="#272727"
        android:text="@string/users"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="@+id/releaseList"
        app:layout_constraintEnd_toEndOf="@+id/search_bar"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/releaseList"
        app:layout_constraintTop_toBottomOf="@+id/search_bar" />

    <TextView
        android:id="@+id/nousernameerror"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/nouser"
        android:textColor="#D5D5D5"
        android:textSize="16sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/releaseList"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>